Footer layout done, links don't work, and need to fix alignment of Contact and Links on phone

--- a/crochet-store/src/index.css
+++ b/crochet-store/src/index.css
@@ -8,6 +8,10 @@ html, body{ /*default settings*/
   object-fit: cover;
 } */
 
+li{
+  list-style-type: none 
+}
+
 hr.decorative-line{
   height: 1px;
   width: 80%;
@@ -88,20 +92,25 @@ hr.decorative-line{
   border-radius: 200%;
 }
 
-a{
+.navigation-bar-li{
+  display: inline-block; /* makes them list horizontally*/
+  margin: 0px 13px;
+}
+
+.navigation-bar-text{
   text-decoration: none;
   color: #FF8AAE;
   font-size: clamp(13px, 2vw, 22px); /*font-size can shrink (14px min, 22px max)*/
 }
 
-a:hover{
+.navigation-bar-text:hover{
   color: #AB9CA3;
 }
 
-li{
-  display: inline-block; /* makes them list horizontally*/
-  margin: 0px 13px;
-}
+/* li{
+  text-decoration: none;
+  color: #FF8AAE;
+} */
 
 .navigation-bar-links{
   display: flex;
@@ -161,7 +170,7 @@ li{
   flex-wrap: wrap;
   gap: 30px 110px;
   margin-top: 60px;
-  margin-bottom: 60px;
+  margin-bottom: 100px;
 }
 
 .category-button{
@@ -180,16 +189,80 @@ li{
 }
 
 /*FOOTER*/
-footer{
+/* footer{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; 
+  align-items: center;
+  height: 350px;
+  background-color: #FFE3F1;
+} */
+
+.footer-container{
+  /* height: 270px; */
+  background-color: #FFE3F1;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 50px 15px;
+  /* align-items: center; */
+  flex-wrap: wrap;
+  gap: 25px 0px;
+}
+
+.footer-title{
+  color: #81787C;
+  font-size: 25px;
+  font-weight: bold;
+  margin-bottom: 13px;
+}
+
+.contacts-container{
+  display: flex;
+  flex-direction: column;
+}
+
+.links-container{
+  display: flex;
+  flex-direction: column;
+
+}
+
+.footer-link, .footer-contact-link{
+  text-decoration: none;
+  color: #81787C;
+  font-size: 20px;
+  margin: 3px 0px;
+}
+
+.footer-link:hover, .footer-contact-link:hover{
+  color: #FF8AAE;
+}
+
+.contact-icon{
+  width:30px;
+  height:30px
+}
+
+.instagram-container, .email-container{
+  display: flex;
+  flex-direction: row;
+  /* align-items: center; */
+  gap: 12px;
+  margin: 10px 10px;
+}
+
+.copyright-container{
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  width: 100%;
   height: 65px;
   background-color: #FFF5F5;
 }
 
-.footer-text{
+.copyright-text{
   color: #FF8AAE;
 }
 
